<resources>
    <string name="app_name">CleanSound</string>
    <string name="title_home">Home</string>
    <string name="playlist_image_desc">Playlist of the Playlist</string>
    <string name="track_image_desc">Playlist of the Track</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Favorite</string>
    <string name="text_register">Register</string>
    <string name="register_desc">Register an account for\n using our services</string>
    <string name="splash_title">CleanSound</string>
    <string name="cleansound_logo_title">Cleansound Logo</string>
    <string name="login">Login</string>
    <string name="register_message">Didn\'t have account?</string>
    <string name="register_link">Register here!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="redirect_login_messsage">Already Registered ? Sign In</string>
    <string name="featured_playlist">Featured Playlist For You</string>
    <string name="featured_tracks">Featured Tracks For You</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cleansound">Cleansound</string>
    <string name="motion_layout_welcome_to">Welcome To</string>
    <string name="motion_layout_hope_you_enjoy">Hope You Enjoy</string>
    <string name="motion_layout_start_the_app">Start The App</string>
    <string name="image_profile_picture">Image Profile Picture</string>
    <string name="profile_setup_how_do_we_should_call_you">How do we Should Call you?</string>
    <string name="profile_picture_image">Profile Picture Image</string>
    <string name="username">Username</string>
    <string name="description_of_yourself">Description of yourself</string>
    <string name="procced">Procced</string>
    <string name="album_image">Album Image</string>
    <string name="track_title">Track Title</string>
    <string name="track_name">Track Name</string>
    <string name="artists_name">Artists Name</string>
    <string name="artists">Artists</string>
    <string name="duration">Duration</string>
    <string name="track_duration">3:40</string>
    <string name="release_date">Release Date:</string>
    <string name="track_release_date">Jan 1, 2023</string>
    <string name="insert_into_favorites">Insert Into Favorites</string>
    <string name="listen_to_spotify">Listen to Spotify</string>
    <string name="your_favorite_tracks">Your Favorite Tracks</string>
    <string name="search_for_any_tracks">Search for any tracks</string>
    <string name="user_profile">User profile</string>
    <string name="email_user">Sebastian@gmail.com</string>
    <string name="profile_username">Sebastian</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="user_desc">Emu Ottori</string>
    <string name="logout">Logout</string>
</resources>