<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/spacing_12"
    tools:context=".ui.auth.LoginFragment">

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="10dp"
        android:text="@string/user_profile"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/card_img_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/card_img_profile"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginVertical="44dp"
        android:background="@drawable/wave2"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       >

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:cardCornerRadius="75dp">

            <ImageView
                android:id="@+id/ivProfilePicture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_profile_picture"
                android:src="@drawable/logo"

                tools:src="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_12"
        android:paddingVertical="@dimen/spacing_8"
        app:layout_constraintTop_toBottomOf="@+id/card_img_profile">
        <!--Email-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/light_slate_gray"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tvEmailUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_12"
            android:text="@string/email_user"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />

        <!--Username-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/light_slate_gray"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_12"
            android:text="@string/profile_username"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />

        <!--Deskripsi-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:textColor="@color/light_slate_gray"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_12"
            android:text="@string/user_desc"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />
    </LinearLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_box"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/ll_information"
        tools:ignore="NotSibling"
        tools:layout_editor_absoluteX="32dp" />


</androidx.constraintlayout.widget.ConstraintLayout>