<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bg_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteBlue2"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/radius_20"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <!-- Image -->
            <ImageView
                android:id="@+id/trackImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/album_image"
                android:src="@drawable/cleansound" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/spacing_20">
                <!-- Song Name -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_title"
                    android:textSize="@dimen/text_size_16"
                    />

                <!-- Singer -->

                <TextView
                    android:id="@+id/trackTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/track_name"
                    android:textSize="@dimen/text_size_20"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artists_name"
                    android:textSize="@dimen/text_size_16"
                    />
                <TextView
                    android:id="@+id/trackSinger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:text="@string/artists"
                    android:textSize="@dimen/text_size_20" />

                <!-- Duration -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:textSize="@dimen/text_size_16"
                    />
                <TextView
                    android:id="@+id/trackDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:text="@string/track_duration"
                    android:textSize="@dimen/text_size_20" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                        <!-- Release Date -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/release_date"
                            android:textSize="@dimen/text_size_16" />

                        <TextView
                            android:id="@+id/trackReleaseDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:textStyle="bold"
                            android:text="@string/track_release_date"
                            android:textSize="@dimen/text_size_20" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="end|center"
                        android:paddingRight="@dimen/spacing_8"
                        >
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnPlay"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/ic_play"
                            android:backgroundTint="@color/blue"
                            android:visibility="visible"
                            android:contentDescription="Button Play"
                            android:layout_centerInParent="true"
                            />
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnPause"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/ic_pause"
                            android:backgroundTint="@color/blue"
                            android:layout_centerInParent="true"
                            />
                    </LinearLayout>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/addIntoFavorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_box"
                    android:elevation="@dimen/cardview_default_elevation"
                    android:text="@string/insert_into_favorites"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:iconTint="@color/transparent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRedirectSpotify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_box"
                    android:elevation="@dimen/cardview_default_elevation"
                    android:text="@string/listen_to_spotify"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:iconTint="@color/transparent" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
