<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_motion_layout_scene"
    tools:context=".ui.motion.MotionLayout">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/image_profile_picture"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="55dp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cleansound"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_motion"
        app:layout_constraintVertical_bias="0.551" />

    <TextView
        android:id="@+id/tv_motion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/motion_layout_welcome_to"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_32"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="384dp" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/motion_layout_hope_you_enjoy"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_32"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="431dp" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menuEnd"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="124dp"
        android:tint="@color/blue"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_circle_24"
        tools:layout_editor_absoluteY="887dp" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="130dp"
        android:tint="@color/blue"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menuEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menuEnd"
        app:srcCompat="@drawable/ic_circle_24" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/btn_box"
        android:text="@string/motion_layout_start_the_app"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="32dp" />
</androidx.constraintlayout.motion.widget.MotionLayout>