<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splash">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cleansound.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_trackDetailFragment"
            app:destination="@id/trackDetailFragment"
            app:popUpTo="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_home_to_featuredTracksFragment"
            app:destination="@id/featuredTracksFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.cleansound.view.search.SearchTracksFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search_tracks">
        <action
            android:id="@+id/action_navigation_dashboard_to_trackDetailFragment"
            app:destination="@id/trackDetailFragment"
            app:popUpTo="@id/navigation_search" />

    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.cleansound.view.favorite.FavoriteTracksFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_favorite_tracks" >
        <action
            android:id="@+id/action_navigation_search_to_trackDetailFragment"
            app:destination="@id/trackDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.cleansound.view.auth.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/navigation_home"/>
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.cleansound.view.auth.RegisterFragment"
        android:label="RegisterFragment"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_profileSetupFragment"
            app:destination="@id/profileSetupFragment" />
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/splash"
        android:name="com.example.cleansound.view.splash.Splash"
        android:label="Splash" >
        <action
            android:id="@+id/action_splash_to_motionLayout"
            app:destination="@id/motionLayout" />
        <action
            android:id="@+id/action_splash_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/trackDetailFragment"
        android:name="com.example.cleansound.view.details.TrackDetailFragment"
        android:label="TrackDetailFragment">
        <argument
            android:name="trackId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.cleansound.view.profile.ProfileFragment"
        android:label="FavoriteFragment" >
        <action
            android:id="@+id/action_navigation_profile_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileSetupFragment"
        android:name="com.example.cleansound.view.auth.ProfileSetupFragment"
        android:label="ProfileSetupFragment" >
        <action
            android:id="@+id/action_profileSetupFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/featuredTracksFragment"
        android:name="com.example.cleansound.view.home.FeaturedTracksFragment"
        android:label="FeaturedTracksFragment"
        tools:layout="@layout/fragment_featured_tracks"
        >
        <argument
            android:name="playlistId"
            app:argType="string" />
        <action
            android:id="@+id/action_featuredTracksFragment_to_trackDetailFragment"
            app:destination="@id/trackDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/motionLayout"
        android:name="com.example.cleansound.view.motion.MotionLayout"
        android:label="fragment_motion_layout"
        tools:layout="@layout/fragment_motion_layout" >
        <action
            android:id="@+id/action_motionLayout_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

</navigation>